--- a/client/src/app/components/simple-tag/simple-tag.component.scss
+++ b/client/src/app/components/simple-tag/simple-tag.component.scss
@@ -18,6 +18,7 @@ $status-bg-color: #f4f5f8;
 }
 
 .tag-container {
+    position: relative;
     background-color: transparent;
     color: rgba($tag-normal-color, 0.84);
     padding: 3px 13px;
@@ -87,5 +88,27 @@ $status-bg-color: #f4f5f8;
                 margin: 0;
             }
         }
+    }
+    .tag-remove {
+        display: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        border-radius: 500px;
+        box-sizing: border-box;
+    }
+    &:hover {
+        .tag-remove {
+            @include flex(row, center, center);
+            background-color: rgba($status-bg-color, .7);
+            mat-icon {
+                font-size: 20px;
+                color: $tag-red-color;
+                width: 20px;
+                height: 20px;
+            }
+        } 
     }
 }
