--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -320,7 +320,7 @@
         <div class="profile-form__field">
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>Designation</mat-label>
-            <input matInput placeholder="Designation" type="text" [formControl]="workExperienceFormArray.controls[i].controls.position_name">
+            <input matInput placeholder="Designation" type="text" [formControl]="workExperienceFormArray.controls[i].controls.job">
           </mat-form-field>
         </div>
         <div class="profile-form__field textarea">
