--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -387,18 +387,18 @@
         SKILLS & INTERESTS
       </h3>
       <div class="profile-form__field search">
-        <h3>Skills <span *ngIf="userSkillsDataList.length > 0" class="count">{{userSkillsDataList.length}}</span></h3>
+        <h3>Skills <span *ngIf="userSkillsList.length > 0" class="count">{{userSkillsList.length}}</span></h3>
         <mat-form-field appearance="standard" class="search">
           <mat-icon matSuffix>search</mat-icon>
           <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteSkills" [formControl]="skillsAndInterestsForm.controls.skills">
-          <mat-autocomplete #autocompleteSkills="matAutocomplete" (closed)="blurSkillSearchField('skills')">
+          <mat-autocomplete #autocompleteSkills="matAutocomplete">
             <mat-option *ngFor="let autocomplete_skill of autocomplete_skills" [value]="autocomplete_skill.skill" (onSelectionChange)="addSkills(autocomplete_skill)">
               <span>{{autocomplete_skill.skill}}</span>
             </mat-option>
           </mat-autocomplete>
         </mat-form-field>
-        <div *ngIf="userSkillsDataList.length > 0" class="skills">
-          <simple-tag *ngFor="let skillData of userSkillsDataList; let i = index" type="gray" title="{{userSkillsDataList[i].skill}}" ellipseTag="true" value="{{userSkillsDataList[i].skill_level}}"></simple-tag>
+        <div *ngIf="userSkillsList.length > 0" class="skills">
+          <simple-tag *ngFor="let skillData of userSkillsList; let i = index" type="gray" title="{{skillData.skill}}" ellipseTag="true" value="{{skillData.skill_level}}" (click)="removeUserSkillsData(i, skillData)"></simple-tag>
         </div>
       </div>
       <div class="profile-form__field search">
