--- a/client/src/app/components/simple-tag/simple-tag.component.html
+++ b/client/src/app/components/simple-tag/simple-tag.component.html
@@ -1,9 +1,10 @@
 
-<div [class]="tagClasseNames[type]" [class.tag-ellipse]="ellipseTag" [class.tag-online]="onlineTag" [class.tag-container]="true" [class.active]="active">
+<div [class]="tagClasseNames[type]" [class.tag-ellipse]="ellipseTag" [class.tag-online]="onlineTag" [class.tag-container]="true" [class.active]="active" [class.tag-control]="isControl">
   <span *ngIf="title">{{title}}</span>
+  <mat-icon class="remove-icon" *ngIf="ellipseTag && isControl" (click)="onRemove()">highlight_off</mat-icon>
   <mat-icon *ngIf="onlineTag">radio_button_checked</mat-icon>
   <div *ngIf="ellipseTag" class='ellipse-container'>
-    <mat-icon *ngFor="let val of numbers" [class.active]="val < value">brightness_1</mat-icon>
+    <mat-icon *ngFor="let val of numbers" [class.active]="val < value" (click) ="onSelectLevel(val)">brightness_1</mat-icon>
   </div>
   <div *ngIf="removeTag" class="tag-remove">
     <mat-icon>delete</mat-icon>
