mobile friendly tab menu

--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -1,10 +1,17 @@
 <div *ngIf="selectedPageIndex>0" class="profile-completion">
     <div class="container">
       <ng-container *ngFor="let page_title of page_titles; let i = index">
-        <action-button *ngIf="page_title" class="link-btn" type="text" title="{{page_title}}" (click)="goToPage(i)" [done]="selectedPageIndex > i" [disabled]="selectedPageIndex < i"></action-button>
+        <action-button *ngIf="page_title" class="link-btn desktop" type="text" title="{{page_title}}" (click)="goToPage(i)" [done]="selectedPageIndex > i" [disabled]="selectedPageIndex < i"></action-button>
       </ng-container>
       <span class="progress-label" [class.done]="selectedPageIndex===9">{{progressWidth[selectedPageIndex].label}}%</span>
+      <span class="progress-label tablet">{{page_titles[selectedPageIndex]}}</span>
+      <mat-icon (click)="toggleTabMenuOpen()">{{isTabMenuOpen ? 'close' : 'menu'}}</mat-icon>
       <div class="progress-bar" [style.width.%]="progressWidth[selectedPageIndex].width"></div>
+      <div class="container__header tablet" [class.open]="isTabMenuOpen">
+        <ng-container *ngFor="let page_title of page_titles; let i = index">
+          <action-button *ngIf="page_title" class="link-btn" type="text" title="{{page_title}}" (click)="goToPage(i)" [done]="selectedPageIndex > i" [disabled]="selectedPageIndex < i"></action-button>
+        </ng-container>
+      </div>
     </div>
   </div>
   
