--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -6,6 +6,8 @@
       <mat-icon (click)="toggleTabMenuOpen()">{{isTabMenuOpen ? 'close' : 'menu'}}</mat-icon>
       <span class="progress-label tablet">{{page_titles[selectedPageIndex]}}</span>
       <span class="progress-label" [class.done]="selectedPageIndex===9">{{progressWidth[selectedPageIndex].label}}%</span>
+      <span class="progress-label tablet">{{page_titles[selectedPageIndex]}}</span>
+      <mat-icon (click)="toggleTabMenuOpen()">{{isTabMenuOpen ? 'close' : 'menu'}}</mat-icon>
       <div class="progress-bar" [style.width.%]="progressWidth[selectedPageIndex].width"></div>
       <div class="container__header tablet" [class.open]="isTabMenuOpen">
         <ng-container *ngFor="let page_title of page_titles; let i = index">
