Update Login flow - Navigate to My profile page, if user created profile - Navigate to Create Profile page, if user didn't create profile yet.

--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -581,7 +581,7 @@
       </div>
     </div>
     <div class="container__full">
-      <action-button class="view-profile" type="flat" title="View Profile" color="primary" (click)="goToNextPage()"></action-button>
+      <action-button class="view-profile" type="flat" title="View Profile" color="primary" (click)="goToMyProfilePage()"></action-button>
     </div>
   </div>
   
